jilles      2005/12/10 01:22:24 UTC	(20051210-4063)
  Log:
  Move protect from +r to +s as +r is commonly granted
  to normal ops.
  

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2005/12/10 01:18:08 UTC	(20051210-4061)
  Log:
  Enable protect and halfops in ultimate3. Untested.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/ultimate3.c (File Modified) 


jilles      2005/12/10 00:29:54 UTC	(20051210-4059)
  Log:
  No need to check if a protocol module is loaded another time.
  (The issue is that config_ready hooks often really need
  information defined in the protocol module.)
  

  Changes:	Modified:
  +0 -6		trunk/src/atheme.c (File Modified) 


jilles      2005/12/10 00:17:42 UTC	(20051210-4057)
  Log:
  Log a clear error message and exit cleanly if no protocol
  module was loaded in the config file.
  
  Tracker #76
  

  Changes:	Modified:
  +6 -0		trunk/src/conf.c (File Modified) 


jilles      2005/12/09 17:42:11 UTC	(20051209-4055)
  Log:
  Fix a compiler warning.
  

  Changes:	Modified:
  +3 -1		trunk/protocol/inspircd.c (File Modified) 


jilles      2005/12/09 17:19:42 UTC	(20051209-4053)
  Log:
  Add IDLE command to allow remote whois on services.
  Does not show signon time (services startup time).
  
  Submitted by: brain
  

  Changes:	Modified:
  +13 -0	trunk/protocol/inspircd.c (File Modified) 


jilles      2005/12/09 13:32:26 UTC	(20051209-4051)
  Log:
  - Make sure services are opped when joining a channel (from brain)
  - Set the initial channel mode on new channels, using a server MODE (myself)
  - Fix up sethost_sts (from brain)
  

  Changes:	Modified:
  +10 -1	trunk/protocol/inspircd.c (File Modified) 


jilles      2005/12/09 13:07:18 UTC	(20051209-4049)
  Log:
  Don't mess with dalnet-like +r/+e if nickserv is not enabled.
  These are only meaningful with nick registration.
  

  Changes:	Modified:
  +5 -5		trunk/protocol/bahamut.c (File Modified) 